# ember

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE
benchmark/: CMakeLists.txt  main.cpp
lib/ember/: CMakeLists.txt
lib/ember/include/: ember.hpp
lib/ember/src/: config.hpp
lib/ember/src/core/: bezier.cpp  bezier.hpp  circle.cpp  circle.hpp  conflict_free_variant_hash_map.hpp  cubic_b_spline.cpp  cubic_b_spline.hpp  curve.hpp  event_bus.hpp  image.cpp  image.hpp  key_codes.hpp  line.cpp  line.hpp  mouse_button_codes.hpp  project_loader.cpp  project_loader.hpp  transform.cpp  transform.hpp  utils.cpp  utils.hpp  variant_hash_map.hpp  window.cpp  window.hpp
lib/ember/src/graphics/: axis_mesh.hpp  base_mesh.cpp  base_mesh.hpp  bezier_curve.cpp  bezier_curve.hpp  bezier_node.cpp  bezier_node.hpp  camera.cpp  camera.hpp  constant_phong_material.cpp  constant_phong_material.hpp  curve_loader.cpp  curve_loader.hpp  curve_node.cpp  curve_node.hpp  dynamic_line_strip.hpp  dynamic_mesh.hpp  fps_camera_controller.cpp  fps_camera_controller.hpp  gouraud_phong_material.cpp  gouraud_phong_material.hpp  index_buffer.cpp  index_buffer.hpp  light.cpp  light.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  mesh_loader.cpp  mesh_loader.hpp  node.cpp  node.hpp  object3d.cpp  object3d.hpp  object_controller.cpp  object_controller.hpp  object_loader.cpp  object_loader.hpp  perspective_camera.cpp  (+38 more)
lib/ember/src/resource_manager/: resource_descriptions.cpp  resource_descriptions.hpp  resource_index.cpp  resource_index.hpp  resource_manager.cpp  resource_manager.hpp  resource_map.cpp  resource_map.hpp
scripts/: format.sh
shaders/: empty.frag  faceNormal.geom  gouraud.vert  partyShader.vert  phong.frag  phong.vert  projectionSpaceCullingShader.geom  sceneSpaceCulling.geom  sceneSpaceCulling.vert  shadowMap.vert  solidColorShader.frag  solidColorShader.vert  vertexColorShader.frag  vertexColorShader.vert
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  my_glm.cpp  my_glm.hpp  test.cpp
