cmake_minimum_required(VERSION 3.5)
project(ember VERSION 0.1)

add_subdirectory(external/glad)
add_subdirectory(external/glfw)
add_subdirectory(external/glm)
add_subdirectory(external/assimp)
add_subdirectory(external/googletest)
add_subdirectory(external/rapidjson)
add_subdirectory(external/stbimage)
add_subdirectory(lib/ember)
add_subdirectory(src)
add_subdirectory(test)
add_subdirectory(benchmark)